# guv-code

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESCRIPTION.md  MODELS.md  Makefile  README.md  TUI_DESIGN_SPEC.md  TUI_DESIGN_V2.md
scripts/: install.sh
src/: agent.rs  ast.rs  auth.rs  clipboard.rs  config.rs  diff.rs  git.rs  index.rs  llm.rs  main.rs  orchestrator.rs  terminal.rs  tui.rs
src/agent_logic/: coder.rs  mod.rs  planner.rs  reviewer.rs
src/agents/: coder.rs  mod.rs  planner.rs  reviewer.rs
src/ui/: app.rs  diff_viewer.rs  mod.rs  theme.rs
src/ui/widgets/: approval_modal.rs  command_palette.rs  diff_view.rs  image_view.rs  mod.rs  status_bar.rs  stepper.rs  tool_pane.rs
web/: .env.example  .prettierrc  README.md  components.json  jest.config.cjs  package.json  playwright.config.ts
web/db/: schema.ts
web/src/: env.mjs
web/src/__tests__/e2e/: home.spec.ts
web/src/actions/: hello-action.ts
web/src/app/: home-client.tsx  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/src/app/login/: page.tsx
web/src/app/pricing/: page.tsx
web/src/app/privacy-policy/: page.tsx
web/src/app/profile/: page.tsx  profile-client.tsx
web/src/app/terms-of-service/: page.tsx
web/src/app/usage/: page.tsx  usage-client.tsx
web/src/components/: AgentActivity.tsx  ChatView.tsx  copy-install-button.tsx  footer.tsx  icons.tsx  ide-demo.tsx  theme-provider.tsx
web/src/components/navbar/: navbar.tsx  user-dropdown.tsx
web/src/hooks/: use-mobile.tsx
web/src/lib/: constant.ts  fonts.ts  utils.ts
web/src/styles/: globals.css
web/src/types/: user.ts
(+5 files in other folders)
