[package]
name = "guv-code"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
anyhow = "1.0"
chrono = "0.4"
ignore = "0.4"
sha2 = "0.10"
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
