[package]
name = "guv-code"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
anyhow = "1.0"
chrono = "0.4"
ignore = "0.4"
sha2 = "0.10"
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
ratatui = "0.26"
crossterm = "0.27"
inquire = "0.7"
indicatif = { version = "0.17", features = ["rayon"] }
miette = { version = "5.10", features = ["fancy"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rayon = "1.10"
eventsource-stream = "0.2"
owo-colors = "4.0"
similar = { version = "2.5", features = ["inline"] }
